test/conformance/chainsaw/image-validating-policies/standard/cosign-attestation-extract-cache-hit/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-cosign-attestation-cache
  namespace: default
spec:
  containers:
    - name: app
      image: ghcr.io/kyverno/test-images/cosign:github-attestation
